--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
         </div>
     </header>
     <main>
-
+        
+            <div class="header container ">
+                <a class='button' id="task-button" href="#">Add Task</a>
+                <a class='button' id="section-button" href="#">Add Section</a>
+            </div>
+            <div class="container title-row">
+                <h3 class="title">New Task</h3>
+                <ul>
+                    <li><span class="icon green"> &#10003; </span></li>
+                </ul>
+            </div>
+    
     </main>
 </body>
 </html>
