--- a/index.html
+++ b/index.html
@@ -20,12 +20,64 @@
                 <a class='button' id="task-button" href="#">Add Task</a>
                 <a class='button' id="section-button" href="#">Add Section</a>
             </div>
-            <div class="container title-row">
-                <h3 class="title">New Task</h3>
-                <ul>
-                    <li><span class="icon green"> &#10003; </span></li>
-                </ul>
+
+            <div class="container">
+                <div class="title-row">
+                    <span class="arrow-down">&#9660;</span>
+                    <h3 class="title">New Task</h3>
+                    <ul class="list">
+                        <li><span class="icon green"> &#10003; 
+                            </span> <p class="chores">Quarterly Newsletter</p> 
+                            <a class="badge editorilas" href="#">Editorial</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="title-row">
+                    <span class="arrow-down">&#9660;</span>
+                    <h3 class="title">Today</h3>
+                    <ul class="list">
+                        <li><span class="icon green"> &#10003; 
+                            </span> <p class="chores">Recruiting blog post</p> 
+                            <a class="badge editorilas" href="#">Editorial</a>
+                        </li>
+                        <li><span class="icon green"> &#10003; 
+                            </span> <p class="chores">Mobile app launch</p> 
+                            <a class="badge goals" href="#">Q1 Goals</a>
+                        </li>
+                        <li><span class="icon red"> &#10005; 
+                            </span> <p class="chores">Interview Jhon H.</p> 
+                            <a class="badge recruiting" href="#">Recruiting</a>
+                        </li>
+                        <li><span class="icon green"> &#10003; 
+                            </span> <p class="chores">Summit update to mobile storefronts</p> 
+                            <a class="badge mobile" href="#">Mobile</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="title-row">
+                    <span class="arrow-down">&#9660;</span>
+                    <h3 class="title">Upcoming</h3>
+                    <ul class="list">
+                        <li><span class="icon red"> &#10005; 
+                            </span> <p class="chores">Schedule meeting with Alex</p> 
+                        </li>
+                        <li><span class="icon green"> &#10003; 
+                            </span> <p class="chores">Homepage refresh</p> 
+                            <a class="badge website" href="#">Website</a>
+                        </li>
+                        <li><span class="icon green"> &#10003; 
+                            </span> <p class="chores">Onboard new Sales team members</p> 
+                            <a class="badge sales" href="#">Sales</a>
+                        </li>
+                        <li><span class="icon green"> &#10003; 
+                            </span> <p class="chores">Review editorial calendar</p> 
+                            <a class="badge editorilas" href="#">Editorial</a>
+                        </li>
+                    </ul>
+                </div>
+                </div>
             </div>
+            
     
     </main>
 </body>
